fix the width of column when overflow content

--- a/PMS.Web/Content/style.css
+++ b/PMS.Web/Content/style.css
@@ -4602,6 +4602,7 @@ a.animated-button:link, a.animated-button:visited {
   text-align: center;
   padding: 5px 10px;
   position: relative;
+  max-width: 400px;
 }
 
 .tableContents tr:last-child td {
